2011-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): Initialize with pscp/plink only
	when running under W32.
	(tramp-debug-message): Extend function exclude list.  Use `regexp-opt'.

	* tramp-sh.el (tramp-find-inline-compress)
	(tramp-get-inline-coding): Quote command after pipe symbol for
	local calls under W32.  (Bug#6784)

2010-12-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-methods): Add recursive options to "scpc" and
	"scpx".

2010-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method-alist, tramp-default-user-alist)
	(tramp-local-host-regexp, tramp-prefix-domain-format)
	(tramp-prefix-domain-regexp): Set tramp-autoload cookie.

	* tramp-efs.el:
	* tramp-ftp.el:
	* tramp-gvfs.el:
	* tramp-gw.el:
	* tramp-imap.el:
	* tramp-sh.el:
	* tramp-smb.el: Add tramp-autoload cookie for initialisation code
	of `tramp-default-method-alist' and `tramp-default-user-alist'.

2010-12-27  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (tramp-loaddefs.el): Handle case on systems on which
	the format of absolute pathes are different between its shell and
	in emacsen, like MSYS.  Reported by Yosuke YAMADA
	<sunasaji@gmail.com>.

	* tramp.el (tramp-default-user-alist): Do not add "ssh" based
	methods, otherwise ~/.ssh/config would be ignored.

2010-12-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-persistency-file-name): Use
	`locate-user-emacs-file' if fboundp.

2010-12-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-password, tramp-process-actions): Revert
	patch from 2010-12-08.  Use `save-restriction'.

2010-12-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-temp-buffer-file-name): Make it permanent-local.
	(tramp-handle-insert-file-contents): Do not set permanent-local
	property.
	(tramp-action-password): Delete region, do not narrow.
	(tramp-process-actions): Do not widen.
